# ome2023

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Makefile  Makefile.am  README.md  configure.ac
.github/workflows/: build-indivisual-chapter-pdfs.yml  build-latex-image.yml  os-build-image.yml
01/: Makefile  links.html  sample1.html  sample2.html  sample3.html  self_intro.html  template.html
01/material/: Makefile.am
01/slide/: llmk.toml  slide01-1.tex  slide01-2.tex  slide01-3.tex  slide01-4.tex
01/textbook/: body.tex  llmk.toml  text01.tex
01/textbook/contents/: chap01_01.tex  chap01_02.tex  chap01_02_xx.tex  chap01_03.tex  chap01_04.tex  chap01_05.tex  chap01_06.tex  chap01_07.tex  chap01_08.tex
02/: block3.hsp  handan.hsp  hata.hsp  kakiget.hsp  poker.hsp  swhandan.hsp
02/material/: Makefile.am  install_yolov8.sh  keisan.hsp  landing.hsp  mes.hsp  star_liner.hsp  switch.hsp  test_yolov8.py  usbcam_yolov8.py
02/org/: gpio.hsp  i2c_test.hsp  move.hsp  repeat.hsp  swjump.hsp
02/slide/: llmk.toml
02/textbook/: body.tex  text02.tex
02/textbook/contents/: chap02_01.tex  chap02_02.tex  chap02_03_1.tex  chap02_03_10.tex  chap02_03_11.tex  chap02_03_2.tex  chap02_03_3.tex  chap02_03_4.tex  chap02_03_5-7.tex  chap02_03_8.tex  chap02_03_9.tex  chap02_04_1-4.tex  chap02_04_5.tex  chap02_04_6.tex  chap02_05_1-5.tex  chap02_05_6.tex
03/: Ltika.hsp  README.md  button_led.hsp  button_led2.hsp  button_led3.hsp  led.hsp  sensors.hsp
03/material/: Makefile.am  button.hsp  button_led2.hsp  button_led3.hsp  led.hsp
03/rensyu/: kanji.txt
03/rensyu/kokugo/: syousetu.txt
03/slide/: llmk.toml  slide03.tex
03/slide/contents/: advanced_command.tex  sensorboard.tex  shell_command.tex  title.tex
03/textbook/: body.tex  llmk.toml  text03.tex
03/textbook/contents/: chap03_010_Intro.tex  chap03_110_Terminal.tex  chap03_120_FilesDirs.tex  chap03_130_Commands01.tex  chap03_140_Commands02.tex  chap03_210_SensorBoard.tex  chap03_220_BME280.tex  chap03_230_LEDBlinker.tex  chap03_240_SimpleButtonLED.tex  chap03_250_ToggleButtonLED.tex  chap03_260_RotationButtonLED.tex  chap03_310_AdvancedCommands.tex  chap03_320_PipeAndRedirect.tex  chap03_330_Troubleshooting.tex  chap03_410_ChallengeFileManip.tex  chap03_420_ChallengeLED.tex  chap03_430_ChallengeGIFAnime.tex
04/: gcube.hsp  hsp3dish.ini  led_test2.hsp  moji.hsp
04/material/: 3dsnake.hsp  Makefile.am  apple.hsp  catch.hsp  celput.hsp  fall.hsp  jump.hsp  luxmove.hsp  move.hsp  rndfall.hsp  swhandan.hsp  tamafall.hsp
04/org/: array.hsp  catch.hsp  kick.hsp  led_test.hsp  luxmove.hsp  rndmove.hsp
04/textbook/: .gitignore  body.tex  llmk.toml  text04.tex
04/textbook/contents/: chap04_010_Intro.tex  chap04_110_Prep.tex  chap04_120_IfStatement.tex  chap04_130_KickHsp.tex  chap04_210_UseImage.tex  (+3 more)
05/: README.md  anain.hsp  angle.hsp  angle2.hsp  block3_angle.hsp  digin.hsp  ir.hsp  kyori.hsp
05/material/: How_To_Register_IR.txt  How_To_Use_register_ir.md  Makefile.am  anain.hsp  angle.hsp  angle2.hsp  digin.hsp  digout.hsp  kyori.hsp  oled.hsp  pwm.hsp  template.lircd.conf
05/slide/: llmk.toml  slide05.tex
05/textbook/: body.tex  llmk.toml  text05.tex
06/: julius.hsp  kudamono.dic  kudamono.yomi  ledbyvoice.hsp  onoff.yomi  openjtalk.hsp  readcalc.hsp  readdate.hsp  voice.hsp
06/material/: Makefile.am
06/material/www/: ir.html  webserver.py
06/material/www/cgi-bin/: ir.hsp  jtalk.hsp  led.hsp
06/slide/: slide07.tex
06/textbook/: body.tex  text07.tex
07/: .gitignore
07/material/: Makefile.am  julius.hsp  kudamono.dic  ledbyvoice.hsp  onoff.dic
07/material/www/: jtalk.html
07/slide/: llmk.toml  slide06.tex
07/textbook/: llmk.toml  text06.tex
08/: amedas.hsp  friend.hsp  links.html  template.html  tv.hsp  weblio.hsp  wikipedia.hsp  zipcode.hsp
08/material/: Makefile.am  amedas_led.hsp  eki.hsp  title.hsp
08/material/www/cgi-bin/: ascii_table.hsp
08/slide/: llmk.toml  slide08.tex
08/textbook/: body.tex  llmk.toml  text08.tex
08/www/: ascii_table.html  links.html  webserver.py
cards/: README.md  cards.tex  llmk.toml
cards/ccimages/: boy-raincoat.eps  publicdomainq-0015006bbqpwg.eps  yellow-umbrella.eps
contrib/: Makefile  Makefile.am
contrib/Dictationkit/: .gitignore  Makefile.am  Makefile.in  configure  configure.ac
contrib/Dictationkit/src/: .gitignore  Makefile.am  Makefile.in  am-gmm.jconf.template  am-gmm_template.jconf  main.jconf.template  run-linux-gmm.sh.template
contrib/FaBo/: Makefile.am  oled  rpz-fabo.as  rpz-gpio-cl.as  rpz-gpio.as  rpz-sensor  spi
contrib/FaBo/FaBoOLED_EROLED096/: EROLED096.py  __init__.py  bmp_d.py  font_d.py
contrib/HTMLParse/: Makefile.am  amedas.py  decurl.py  eki.py  hspcurl.as  htmlparser  htmlparser.as  tv.py  weblio.py  wikipedia.py  zipcode.py
contrib/IR/: Makefile.am  convert_pattern  yomi2voca.pl
contrib/JuliusMisc/: .gitignore  Makefile.am  README.md  convert_yomi.sh  julius.as  julius.sh  julius.sh.template  julius_daemon.sh  julius_daemon.sh.template  julius_simple.as  stopjulius.sh
contrib/JuliusMisc/julius_conf/: .gitignore  default.jconf  default.jconf.template
contrib/OpenHSP/: Makefile.am
contrib/OpenHSPUtil/: Makefile.am  cmdexec.as
contrib/OpenJTalk/: Makefile.am  jtalk.as  jtalk.sh  jtalk_synth.sh
contrib/OpenJTalk/openjtalk/voices/gigarakan/: gigarakan.htsvoice
contrib/OpenJTalk/openjtalk/voices/tonaeyoe/: tonaeyoe.htsvoice  tonaeyoe.txt
contrib/WebServer/: Makefile.am  cgi.as
contrib/scripts/: build_openhsp_qemu_usersp.sh  install.bash  install.sh
debian/: README.Debian  README.source  changelog  control  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  ome2023.cron.d.ex  ome2023.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/patches/: initial-commit  series
docker/: os.Dockerfile  texlive.profile  text.Dockerfile  text.Dockerfile.dockerignore
docs/: CONTRIBUTING.md  FEATURES.md  README_os.md  README_text.md
docs/build_in_vm/: index.html  index.md
tools/: kanjicheck.py
tools/copy_llmk_object/: go.mod
vm/: Vagrantfile  bootstrap.bash
(+122 files in other folders)
