# Run
#
# ```
# find 01 02 03 04 05 06 07 08 -type f | sort
# ```
#
# and put the result into below `nobase_dist_omedata_DATA`
# with newline-escapes whenever you commit new lecture materials.

SUBDIRS = contrib/
omedatadir = $(datadir)/ome
nobase_dist_omedata_DATA = \
01/ps.png \
01/school.jpg \
01/Makefile \
01/sample1.html \
01/joyman.png \
01/links.html \
01/tomo.png \
01/food.png \
01/self_intro.html \
01/kondo.png \
01/sample3.html \
01/sample2.html \
01/template.html \
01/face.png \
02/block3.hsp \
02/swhandan.hsp \
02/se_foot.wav \
02/jp_jump.wav \
02/80font.png \
02/jp88bg.png \
02/repeat.hsp \
02/drop.hsp \
02/se_jump2.wav \
02/tof2.hsp \
02/chrorg.png \
02/landing.hsp \
02/hata.hsp \
02/chr.png \
02/se_block2.wav \
02/se_puyo.wav \
02/swjump.hsp \
02/star_liner.hsp \
02/se_break3.wav \
02/switch.hsp \
02/org/block3.hsp \
02/org/swhandan.hsp \
02/org/se_foot.wav \
02/org/jp_jump.wav \
02/org/80font.png \
02/org/jp88bg.png \
02/org/repeat.hsp \
02/org/drop.hsp \
02/org/se_jump2.wav \
02/org/tof2.hsp \
02/org/chrorg.png \
02/org/landing.hsp \
02/org/hata.hsp \
02/org/chr.png \
02/org/se_block2.wav \
02/org/se_puyo.wav \
02/org/swjump.hsp \
02/org/star_liner.hsp \
02/org/se_break3.wav \
02/org/switch.hsp \
02/org/explos.wav \
02/org/i2c_test.hsp \
02/org/bg.png \
02/org/mes.hsp \
02/org/kakiget.hsp \
02/org/jp88chr.png \
02/org/fuujin.png \
02/org/trump.png \
02/org/hsp3dish.ini \
02/org/koma.png \
02/org/uiparts.png \
02/org/jp_dead.wav \
02/org/gpio.hsp \
02/org/shoot.hsp \
02/org/sel.wav \
02/org/keisan.hsp \
02/org/stars.hsp \
02/org/title.png \
02/org/move.hsp \
02/org/fuujin.hsp \
02/org/cappi08.ogg \
02/org/inject.wav \
02/org/poker.hsp \
02/org/handan.hsp \
02/explos.wav \
02/bg.png \
02/mes.hsp \
02/kakiget.hsp \
02/jp88chr.png \
02/fuujin.png \
02/trump.png \
02/hsp3dish.ini \
02/koma.png \
02/uiparts.png \
02/jp_dead.wav \
02/gpio.hsp \
02/shoot.hsp \
02/sel.wav \
02/keisan.hsp \
02/stars.hsp \
02/title.png \
02/move.hsp \
02/fuujin.hsp \
02/cappi08.ogg \
02/inject.wav \
02/poker.hsp \
02/handan.hsp \
03/Ltika.hsp \
03/button_led3.hsp \
03/README.md \
03/button_led2.hsp \
03/button.hsp \
03/led.hsp \
03/rensyu.tar.gz \
03/button_led.hsp \
03/sensors.hsp \
03/rensyu/oda.jpg \
03/rensyu/sansu/sansu.txt \
03/rensyu/sansu/nihon.png \
03/rensyu/kokugo/syousetu.txt \
03/rensyu/rika/rika.png \
03/rensyu/rika/mokei.png \
03/rensyu/kanji.txt \
03/rensyu/syakai/sekai.png \
04/gcube.hsp \
04/array.hsp \
04/swhandan.hsp \
04/rndmove.hsp \
04/sozai13.jpg \
04/sozai8.jpg \
04/se_foot.wav \
04/sozai19.jpg \
04/sozai9.jpg \
04/sozai15.jpg \
04/tamane_s8.png \
04/fall.hsp \
04/se_jump2.wav \
04/sozai12.jpg \
04/tamane_s5.png \
04/tamane_s7.png \
04/tamane_s3.png \
04/tamane_s1.png \
04/yama.jpg \
04/tamadot.png \
04/se_block2.wav \
04/se_puyo.wav \
04/sozai16.jpg \
04/se_break3.wav \
04/sozai14.jpg \
04/sozai17.jpg \
04/sozai1.jpg \
04/tamane_s4.png \
04/rndfall.hsp \
04/org/gcube.hsp \
04/org/array.hsp \
04/org/swhandan.hsp \
04/org/rndmove.hsp \
04/org/fall.hsp \
04/org/yama.jpg \
04/org/tamadot.png \
04/org/rndfall.hsp \
04/org/led_test.hsp \
04/org/led_test2.hsp \
04/org/apple.hsp \
04/org/parts.png \
04/org/jump.hsp \
04/org/yama2.jpg \
04/org/apple.png \
04/org/catch.hsp \
04/org/moji.hsp \
04/org/celput.hsp \
04/org/kick.hsp \
04/org/minitama.png \
04/org/move.hsp \
04/org/luxmove.hsp \
04/led_test.hsp \
04/led_test2.hsp \
04/sozai10.jpg \
04/apple.hsp \
04/parts.png \
04/sozai7.jpg \
04/jump.hsp \
04/sozai5.jpg \
04/yama2.jpg \
04/sozai3.jpg \
04/sozai6.jpg \
04/hsp3dish.ini \
04/tamane_s6.png \
04/apple.png \
04/sozai2.jpg \
04/sozai18.jpg \
04/catch.hsp \
04/sel.wav \
04/moji.hsp \
04/sozai11.jpg \
04/celput.hsp \
04/kick.hsp \
04/minitama.png \
04/move.hsp \
04/tamane_s2.png \
04/sozai4.jpg \
04/sozai20.jpg \
04/luxmove.hsp \
05/kyori.hsp \
05/digin.hsp \
05/pwm.hsp \
05/angle.hsp \
05/README.md \
05/oled.hsp \
05/block3_angle.hsp \
05/hyou.png \
05/How_To_Register_IR.txt \
05/ir.hsp \
05/template.lircd.conf \
05/How_To_Use_register_ir.md \
05/anain.hsp \
05/digout.hsp \
05/angle2.hsp \
06/readdate.hsp \
06/julius.hsp \
06/readcalc.hsp \
06/kudamono.dic \
06/openjtalk.hsp \
06/ledbyvoice.hsp \
06/onoff.yomi \
06/voice.hsp \
06/onoff.dic \
06/kudamono.yomi \
07/.gitignore \
07/www/cgi-bin/querystring.hsp \
07/www/cgi-bin/ir.hsp \
07/www/cgi-bin/qsled.hsp \
07/www/cgi-bin/jtalk.hsp \
07/www/cgi-bin/sensors_table.hsp \
07/www/cgi-bin/led.hsp \
07/www/cgi-bin/sensors.hsp \
07/www/jtalk.html \
07/www/webserver.py \
07/www/ir.html \
08/amedas_led.hsp \
08/zipcode.hsp \
08/.gitignore \
08/tv.hsp \
08/weblio.hsp \
08/links.html \
08/www/cgi-bin/ascii_table.hsp \
08/www/index.html \
08/www/ascii_table.html \
08/www/webserver.py \
08/eki.hsp \
08/amedas.hsp \
08/title.hsp \
08/friend.hsp \
08/wikipedia.hsp \
08/template.html
