# Run
# find . -type f -not -name "Makefile.am" -not -name "Makefile" | sort
# to fill the entry below of nobase_dist_omedata_DATA when you add or remove
# files.
omedatadir = $(datadir)/ome/01
nobase_dist_omedata_DATA = \
face.png \
food.png \
joyman.png \
kondo.png \
links.html \
ps.png \
sample1.html \
sample2.html \
sample3.html \
school.jpg \
self_intro.html \
template.html \
tomo.png
