# Run
# find . -type f -not -name "Makefile.am" -not -name "Makefile" | sort
# to fill the entry below of nobase_dist_omedata_DATA when you add or remove
# files.
omedatadir = $(datadir)/ome/02
nobase_dist_omedata_DATA = \
80font.png \
bg.png \
block3.hsp \
cappi08.ogg \
chrorg.png \
chr.png \
drop.hsp \
explos.wav \
fuujin.hsp \
fuujin.png \
gpio.hsp \
handan.hsp \
hata.hsp \
hsp3dish.ini \
inject.wav \
jp88bg.png \
jp88chr.png \
jp_dead.wav \
jp_jump.wav \
kakiget.hsp \
keisan.hsp \
koma.png \
landing.hsp \
mes.hsp \
move.hsp \
poker.hsp \
repeat.hsp \
se_block2.wav \
se_break3.wav \
se_foot.wav \
se_jump2.wav \
sel.wav \
se_puyo.wav \
shoot.hsp \
star_liner.hsp \
stars.hsp \
swhandan.hsp \
switch.hsp \
swjump.hsp \
title.png \
tof2.hsp \
trump.png \
uiparts.png
