# Run
# find . -type f -not -name "Makefile.am" -not -name "Makefile" | sort
# to fill the entry below of nobase_dist_omedata_DATA when you add or remove
# files.
omedatadir = $(datadir)/ome
nobase_dist_omedata_DATA = \
button.hsp \
button_led2.hsp \
button_led3.hsp \
button_led.hsp \
led.hsp \
Ltika.hsp \
README.md \
rensyu/kanji.txt \
rensyu/kokugo/syousetu.txt \
rensyu/oda.jpg \
rensyu/rika/mokei.png \
rensyu/rika/rika.png \
rensyu/sansu/nihon.png \
rensyu/sansu/sansu.txt \
rensyu/syakai/sekai.png \
rensyu.tar.gz \
sensors.hsp
