# Run
# find . -type f -not -name "Makefile.am" -not -name "Makefile" | sort
# to fill the entry below of nobase_dist_omedata_DATA when you add or remove
# files.
omedatadir = $(datadir)/ome
nobase_dist_omedata_DATA = \
apple.hsp \
apple.png \
array.hsp \
catch.hsp \
celput.hsp \
fall.hsp \
gcube.hsp \
hsp3dish.ini \
jump.hsp \
kick.hsp \
led_test2.hsp \
led_test.hsp \
luxmove.hsp \
minitama.png \
moji.hsp \
move.hsp \
parts.png \
rndfall.hsp \
rndmove.hsp \
se_block2.wav \
se_break3.wav \
se_foot.wav \
se_jump2.wav \
sel.wav \
se_puyo.wav \
sozai10.jpg \
sozai11.jpg \
sozai12.jpg \
sozai13.jpg \
sozai14.jpg \
sozai15.jpg \
sozai16.jpg \
sozai17.jpg \
sozai18.jpg \
sozai19.jpg \
sozai1.jpg \
sozai20.jpg \
sozai2.jpg \
sozai3.jpg \
sozai4.jpg \
sozai5.jpg \
sozai6.jpg \
sozai7.jpg \
sozai8.jpg \
sozai9.jpg \
swhandan.hsp \
tamadot.png \
tamane_s1.png \
tamane_s2.png \
tamane_s3.png \
tamane_s4.png \
tamane_s5.png \
tamane_s6.png \
tamane_s7.png \
tamane_s8.png \
yama2.jpg \
yama.jpg
