# Run
# find . -type f -not -name "Makefile.am" -not -name "Makefile" | sort
# to fill the entry below of nobase_dist_omedata_DATA when you add or remove
# files.
omedatadir = $(datadir)/ome
nobase_dist_omedata_DATA = \
anain.hsp \
angle2.hsp \
angle.hsp \
block3_angle.hsp \
digin.hsp \
digout.hsp \
How_To_Register_IR.txt \
How_To_Use_register_ir.md \
hyou.png \
ir.hsp \
kyori.hsp \
oled.hsp \
pwm.hsp \
README.md \
template.lircd.conf
