# Run
# find . -type f -not -name "Makefile.am" -not -name "Makefile" | sort
# to fill the entry below of nobase_dist_omedata_DATA when you add or remove
# files.
omedatadir = $(datadir)/ome/06
nobase_dist_omedata_DATA = \
htsvoice-tohoku-f01/COPYRIGHT.txt \
htsvoice-tohoku-f01/README.md \
htsvoice-tohoku-f01/tohoku-f01-angry.htsvoice \
htsvoice-tohoku-f01/tohoku-f01-happy.htsvoice \
htsvoice-tohoku-f01/tohoku-f01-neutral.htsvoice \
htsvoice-tohoku-f01/tohoku-f01-sad.htsvoice \
julius.hsp \
kudamono.dic \
kudamono.yomi \
ledbyvoice.hsp \
onoff.dic \
onoff.yomi \
openjtalk.hsp \
readcalc.hsp \
readdate.hsp \
voice.hsp
