# Run
# find . -type f -not -name "Makefile.am" -not -name "Makefile" | sort
# to fill the entry below of nobase_dist_omedata_DATA when you add or remove
# files.
omedatadir = $(datadir)/ome/07
nobase_dist_omedata_SCRIPTS = \
www/webserver.py

nobase_dist_omedata_DATA = \
www/cgi-bin/ir.hsp \
www/cgi-bin/jtalk.hsp \
www/cgi-bin/led.hsp \
www/cgi-bin/qsled.hsp \
www/cgi-bin/querystring.hsp \
www/cgi-bin/sensors.hsp \
www/cgi-bin/sensors_table.hsp \
www/ir.html \
www/jtalk.html
