# Run
# find . -type f -not -name "Makefile.am" -not -name "Makefile" | sort
# to fill the entry below of nobase_dist_omedata_DATA when you add or remove
# files.
omedatadir = $(datadir)/ome/08
nobase_dist_omedata_SCRIPTS = \
www/webserver.py
nobase_dist_omedata_DATA = \
amedas.hsp \
amedas_led.hsp \
ascii_table.html \
eki.hsp \
friend.hsp \
links.html \
template.html \
title.hsp \
tv.hsp \
weblio.hsp \
wikipedia.hsp \
www/cgi-bin/ascii_table.hsp \
www/index.html \
zipcode.hsp
