bin_SCRIPTS = oled rpz-sensor spi FaBoOLED_EROLED096
# TODO: FaBoOLED_EROLED096 should be on /usr/lib/python3.x/site-packages.

hspcommondir = $(bindir)/common
hspcommon_DATA = rpz-fabo.as rpz-gpio.as rpz-gpio-cl.as

#TODO: hspcommondir should be at /usr/share/hsp but edit on hsed required to do so.
