bin_SCRIPTS = jtalk.sh jtalk_synth.sh

jtalkdir = $(datadir)/jtalk
jtalk_DATA = \
voices/htsvoice-tohoku-f01/tohoku-f01-angry.htsvoice \
voices/htsvoice-tohoku-f01/tohoku-f01-happy.htsvoice \
voices/htsvoice-tohoku-f01/tohoku-f01-neutral.htsvoice \
voices/htsvoice-tohoku-f01/tohoku-f01-sad.htsvoice



hspcommondir = $(bindir)/common
hspcommon_DATA = jtalk.as ../cmdexec.as

#TODO: hspcommondir should be at /usr/share/hsp but edit on hsed required to do so.
